; ModuleID = '/home/carl/AnghaBench/esp-idf/components/freertos/test/extr_test_suspend_scheduler.c_suspend_scheduler_5ms_task_fn.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/freertos/test/extr_test_suspend_scheduler.c_suspend_scheduler_5ms_task_fn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sched_suspended = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @suspend_scheduler_5ms_task_fn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @suspend_scheduler_5ms_task_fn(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = call i32 (...) @vTaskSuspendAll()
  store i32 1, i32* @sched_suspended, align 4
  store i32 0, i32* %3, align 4
  br label %5

5:                                                ; preds = %10, %1
  %6 = load i32, i32* %3, align 4
  %7 = icmp slt i32 %6, 5
  br i1 %7, label %8, label %13

8:                                                ; preds = %5
  %9 = call i32 @ets_delay_us(i32 1000)
  br label %10

10:                                               ; preds = %8
  %11 = load i32, i32* %3, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %3, align 4
  br label %5

13:                                               ; preds = %5
  %14 = call i32 (...) @xTaskResumeAll()
  store i32 0, i32* @sched_suspended, align 4
  %15 = call i32 @vTaskDelete(i32* null)
  ret void
}

declare dso_local i32 @vTaskSuspendAll(...) #1

declare dso_local i32 @ets_delay_us(i32) #1

declare dso_local i32 @xTaskResumeAll(...) #1

declare dso_local i32 @vTaskDelete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
